# backstage

./: .env.example  .gitignore  CLAUDE.md  Makefile  mkdocs.yml  pyproject.toml
.github/workflows/: cleanup.yml  docs.yml  monthly-pipeline.yml  notify.yml
deploy/: launch.sh
deploy/terraform/: cloud-init.yml.tpl  main.tf  variables.tf
docs/: index.md
docs/cases/eu/: collection.md  data-universe.md  edge-cases.md
docs/pipeline/: overview.md  running.md
flows/: run.py
flows/eu/: __init__.py  collect.py  download.py  package.py  parse.py  publish.py
flows/shared/: package.py  publish.py
src/backstage/: __init__.py  dataset_config.py
src/backstage/collection/: __init__.py
src/backstage/collection/eu/: __init__.py
src/backstage/collection/eu/cellar/: __init__.py
src/backstage/collection/eu/cellar/sparql/: __init__.py  queries.py
src/backstage/collection/eu/eurlex/: __init__.py  download.py  urls.py
src/backstage/utils/: __init__.py  logging.py  retry.py  s3.py  user_agent.py  versions.py
