[project]
name = "backstage"
version = "0.0.0"
description = "backstage - Operational backbone for openstage data pipelines"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Maximilian Haag"},
]

dependencies = [
    "prefect>=3.0",
    "boto3",
    "requests",
    "structlog",
]

[project.optional-dependencies]
parsing = [
    "openbasement",
    "openstage",
]
dev = [
    "pytest",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-openstage-theme",
    "mkdocs-mermaid2-plugin",
    "pymdown-extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backstage"]

[tool.uv.sources]
openbasement = { git = "https://github.com/openstage-eu/openbasement.git" }
openstage = { git = "https://github.com/openstage-eu/openstage.git" }
mkdocs-openstage-theme = { git = "https://github.com/openstage-eu/mkdocs-openstage-theme.git" }
